kubernetes/base/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: jgroups
    port: 7600
    targetPort: jgroups
  selector:
    app: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
  labels:
    app: keycloak
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: jgroups
    port: 7600
    targetPort: jgroups
  selector:
    app: keycloak
